public/stylesheets/disguised-remuneration-frontend.css
/* ... */
.fieldset__legend {
    font-family: "nta",Arial,sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-weight: 400;
    line-height: 1.25;
    color: #0b0c0c;
    -webkit-box-sizing: border-box;
    box-sizing: border-box;
    display: table;
    max-width: 100%;
    padding: 0;
    overflow: hidden;
    white-space: normal;
}

.radios__item {
    font-family: "nta",Arial,sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-weight: 400;
    /* font-size: 16px; */
    font-size: 1rem;
    line-height: 1.25;
    display: block;
    position: relative;
    min-height: 40px;
    margin-bottom: 10px;
    padding: 0 0 0 40px;
    float: none;
    clear: left;
}

.radios__item_nino {
    font-family: "nta",Arial,sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-weight: 400;
    font-size: 1rem;
    line-height: 1.25;
    display: block;
    position: relative;
    min-height: 40px;
    margin-bottom: 60px;
    padding: 0 0 0 40px;
    float: none;
    clear: left;
}

.radios__item_utr {
    font-family: "nta",Arial,sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-weight: 400;
    font-size: 1rem;
    line-height: 1.25;
    display: block;
    position: relative;
    min-height: 40px;
    margin-bottom: 100px;
    padding: 0 0 0 40px;
    float: none;
    clear: left;
}


.radios__input {
    position: absolute;
    z-index: 1;
    top: 0;
    left: 0;
    width: 40px;
    height: 40px;
    cursor: pointer;
    margin: 0;
}

.radios__label {
    margin-bottom: 0;
    float: none;
    padding: 8px 15px 5px;
    cursor: pointer;
    -ms-touch-action: manipulation;
    touch-action: manipulation;
    display: inline-block;
    margin-bottom: 0;
}

.label {
    font-family: "nta", Arial, sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-weight: 400;
    line-height: 1.31579;
    line-height: 1.25;
    color: #0b0c0c;
    display: block;
    margin-bottom: 5px;
}

.radios__conditional {
    margin-bottom: 15px;
    margin-left: 18px;
    padding-left: 33px;
    margin-top: 0px;
    border-left: 4px solid #bfc1c3;
    float: left;
}

.hint {
    font-family: "nta", Arial, sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-weight: 400;
    font-size: 16px;
    line-height: 1.25;
    display: block;
    margin-bottom: 15px;
    color: #6f777b;
}

@media (min-width: 641px) {
    .hint {
        font-size: 19px;
    }
}

.details {
    font-family: "nta",Arial,sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    line-height: 1.25;
    color: #0b0c0c;
    display: block;
}

.details__summary {
    display: inline-block;
    position: relative;
    color: #005ea5;
    cursor: pointer;
}

.details__summary-text {
    text-decoration: underline;
}

.summary-list {
    display: table;
    width: 100%;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    color: #0b0c0c;
    margin: 0;
    line-height: 1.31579;
}

.summary-list__row {
    display: table-row;
}

.summary-list__key {
    width: 62%;
    word-break: normal;
    padding-top: 10px;
    padding-bottom: 10px;
    border-bottom: 1px solid #bfc1c3;
    display: table-cell;
    padding-right: 20px;
    margin: 0;
}

.summary-list__value {
    padding-top: 10px;
    padding-bottom: 10px;
    border-bottom: 1px solid #bfc1c3;
    display: table-cell;
    padding-right: 20px;
    margin: 0;
    word-break: normal;
}

.cya-change-no-word-break {
    word-break: keep-all;
    padding-right: 0;
    text-align: right;
}

.icon-image {
    top: 43%
}

.outline {
    outline-offset: 0
}


@media (min-width: 40.0625em) {
    .app-task-list {
        min-width: 550px;
    }
}


.app-task-list {
    list-style-type: none;
    padding-left: 0;
    margin-top: 0;
    margin-bottom: 0;
}

ol {
    display: block;
    list-style-type: decimal;
    margin-block-start: 1em;
    margin-block-end: 1em;
    margin-inline-start: 0px;
    margin-inline-end: 0px;
    padding-inline-start: 40px;
}

.app-task-list__section {
    display: table;
    font-family: "nta", Arial, sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-weight: 700;
    font-size: 18px;
    line-height: 30px;
}

@media (min-width: 40.0625em) {
    .app-task-list__section {
        font-size: 24px;
    }
}

.app-task-list__section-number {
    display: table-cell;
}

@media (min-width: 40.0625em) {
    .app-task-list__section-number {
        min-width: 30px;
        padding-right: 0;
    }
}

.app-task-list__items {
    font-family: "nta", Arial, sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    font-weight: 400;
    font-size: 19px;
    line-height: 25px;
    margin-bottom: 40px;
    list-style: none;
    padding-left: 0;
}

@media (min-width: 40.0625em) {
    .app-task-list__items {
        padding-left: 30px;
    }
}

.app-task-list__item {
    border-bottom: 1px solid #bfc1c3;
    margin-bottom: 0 !important;
    padding-top: 10px;
    padding-bottom: 10px;
}

.app-task-list__item:first-child {
    border-top: 1px solid #bfc1c3;
}

.app-task-list__task-name {
    display: block;
}

@media (min-width: 28.125em) {
    .app-task-list__task-name {
        float: left;
        width: 75%;
    }
}

li {
    display: list-item;
    text-align: -webkit-match-parent;
}

.app-task-list__item:after {
    content: "";
    display: block;
    clear: both;
}
/* ... */

